[project]
name = "ansible-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.8.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.7.0",
    "molecule>=25.7.0",
    "molecule-plugins[docker]>=23.7.0",
    "ruff>=0.12.7",
    "testinfra>=6.0.0",
]
